<?xml version="1.0"?>
<package>
  <name>morph_teleop</name>
  <version>0.1.0</version>
  <description>The morph_teleop package provides launch files for teleoperation of the robot using keyboard or X-box controller</description>
  <maintainer email="roaldlemmens@gmail.com">Roald Lemmens</maintainer>
  <license>GPLv3</license>
  <url type="website">https://hackaday.io/project/25730-morph-modular-open-robotics-platform-for-hackers</url>
  <url type="repository">https://github.com/roaldlemmens/morph_teleop</url>
  <url type="bugtracker">https://github.com/roaldlemmens/morph_teleop/issues</url>
  <author email="roaldlemmens@gmail.com">Roald Lemmens</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
