<?xml version="1.0"?>
<package>
  <name>morph_navigation</name>
  <version>0.1.0</version>
  <description>The morph_navigation package contains launch files and configuration parameters for using the navigation stack with the Modular Open Robotics Platform for Hackers project</description>
  <maintainer email="roaldlemmens@gmail.com">Roald Lemmens</maintainer>
  <license>GPLv3</license>
  <url type="website">https://hackaday.io/project/25730-morph-modular-open-robotics-platform-for-hackers</url>
  <url type="repository">https://github.com/roaldlemmens/morph_navigation</url>
  <url type="bugtracker">https://github.com/roaldlemmens/morph_navigation/issues</url>
  <author email="roaldlemmens@gmail.com">Roald Lemmens</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
